--- a/home-page.html
+++ b/home-page.html
@@ -60,7 +60,7 @@
           img {
               height: 200px;
               width: 250px;
-              overflow-x:scroll;
+              overflow-x:;
           }
           h2{
               text-align: center;
